[project]
name = "comfyui-inspyrenet-rembg"
description = "ComfyUI node for background removal implementing [a/InSPyReNet](https://github.com/plemeri/InSPyReNet)"
version = "1.1.2"
license = { file = "LICENSE" }
dependencies = ["transparent-background"]

[project.urls]
Repository = "https://github.com/frost-byte/ComfyUI-Inspyrenet-Rembg"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "frost-byte"
DisplayName = "ComfyUI-Inspyrenet-Rembg"
Icon = ""
